--- a/index.html
+++ b/index.html
@@ -208,8 +208,7 @@
 
             <h4>Your Button Code</h4>
             <div class="code">
-                <pre><code id="btn-code"></code>
-                </pre>
+                <pre><code id="btn-code"></code></pre>
             </div>
         
             <h4>Add this before the closing body tag</h4>
@@ -237,5 +236,6 @@
 
     <script src="http://www.dwolla.com/Scripts/jquery-1.4.4.min.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
+    <script src="button.js" type="text/javascript"></script>
 </body>
 </html>
