--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <p>Use this generator to generate an easy to use payment button.</p>
 
         <div class="section">
-            <h3>Parameters</h3>
+            <h3>Button Parameters</h3>
 
             <form class="params">
                 <div class="param clearfix">
@@ -213,7 +213,7 @@
         
             <h4>Add this before the closing body tag</h4>
             <div class="code">
-                <pre><code>&lt;script type="text/javascript" src="https://raw.github.com/obsesh/Dwolla-Pay-Now-Button/master/button.js"&gt; &lt;/script&gt;</code></pre>
+                <pre><code>&lt;script type="text/javascript" src="http://obsesh.github.com/Dwolla-Pay-Now-Button/button.js"&gt; &lt;/script&gt;</code></pre>
             </div>
         </div>
     </div>
