--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
         <p>The payment button generator is an easy way to create payment (and donations) buttons that link to your Dwolla account. You can create these with virtually no prior programming exprience. Simply fill out the parameter fields below, then follow the "installation" instructions.</p>
 
-        <p>Note: You can use multiple payment buttons on a single page.</p>
+        <p>Pro-tip: You can use multiple payment buttons on a single page.</p>
 
         <div class="section">
             <h3>Button Parameters</h3>
